# QuantFlow-Agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  TEST_RESULTS.md  TOOLS.md  chainlit.md  deploy_hf.sh  main.py  pyproject.toml
.chainlit/: config.toml
.github/workflows/: eval.yml
docs/: MEMORY_SYSTEM.md
evals/: EVALUATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  README.md  __init__.py  analyze_regression.py
evals/configs/: eval_config.yaml  llm_judges.yaml
evals/dataset/: edge_cases.json  investment_analysis.json  out_of_scope.json  rag_queries.json  regression_suite.json  tool_usage_cases.json
evals/evaluators/: correctness.py  faithfulness.py  reasoning_quality.py  tool_usage.py
evals/evaluators/rag/: grounding.py  retrieval_metrics.py
evals/metrics/: cost.py  latency.py  usage.py
evals/reports/: README.md
evals/runners/: run_ci.py  run_local.py
evals/utils/: dataset_loader.py  metric_aggregator.py  report_generator.py
graph/: __init__.py  graph.py  nodes.py  state.py
llm/: llm.py  prompt.py
memory/: checkpoints.db-shm  memory.py
rag/: chroma_vector_store.py  chunking.py  embeddings.py  ingest_sec.py  retriever.py  vectorstore.py
scripts/: check_chroma.py  check_indexes.py  ingest.py  resume_ingest.py  test_tool.py  verify_tickers.py
tests/: graph_test.py  quick_test.py  test_tools.py
tools/: __init__.py
tools/market/: __init__.py  compare_stocks.py  financials.py  get_analyst_recommendations.py  get_company_info.py  get_earnings_history.py  get_key_metrics.py  stock_price.py  technical_analysis.py
tools/math/: __init__.py  calculator.py
tools/news/: __init__.py  news_tool.py
tools/rag/: __init__.py  retrieval_tool.py
ui/: ui.py
utils/: loader.py  tracing.py
