[project]
name = "stock-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "edgar>=5.6.3",
    "edgartools>=5.30.0",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.13",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.1.6",
    "lxml>=6.0.4",
    "numexpr>=2.14.1",
    "pinecone-client>=6.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "tiktoken>=0.12.0",
    "yfinance>=1.2.2",
]
